# obuspa

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INTERNAL_SERVICES_GUIDE.md  KNOWN_ISSUES.md  LICENSE  Makefile.am  QUICK_START_GUIDE.md  README.md  RELEASES.md  ROLES_AND_PERMISSIONS.md  SECURITY.md  bitbucket-pipelines.yml  configure.ac  conformance_test_results.txt  factory_reset_example.txt  matt-ws-factory_reset_example.txt  mqtt_factory_reset_example.txt  obuspa.ABOUT
.github/workflows/: ci.yml
ci/: Dockerfile  cdrouter-runner.py  docker-compose.yml
ci/certs/: USERTrustECCCertificationAuthority.crt
ci/configs/: MQTT.txt  STOMP.txt  Secure_MQTT.txt  Secure_STOMP.txt  Secure_WebSocket.txt  WebSocket.txt
examples/plugin/: Makefile.am  configure.ac  vendor_plugin.c
examples/test_uds/: Makefile.am  test_uds.c
include/obuspa/: compiler.h  usp_api.h  vendor_api.h  vendor_defs.h  vendor_options.h.in
include/obuspa/core/: cli.h  common_defs.h  data_model.h  database.h  device.h  dm_access.h  dm_exec.h  dm_inst_vector.h  dm_trans.h  e2e_context.h  e2e_defs.h  expr_vector.h  group_add_vector.h  group_del_vector.h  group_get_vector.h  group_set_vector.h  inst_sel_vector.h  int_vector.h  kv_vector.h  mqtt.h  msg_handler.h  msg_utils.h  mtp_exec.h  nu_ipaddr.h  os_utils.h  path_resolver.h  plugin.h  retry_wait.h  sar_vector.h  se_cache.h  stomp.h  str_vector.h  subs_retry.h  subs_vector.h  text_utils.h  uds.h  uptime.h  usp_broker.h  usp_coap.h  usp_err.h  (+6 more)
src/core/: CMakeLists.txt  bdc_exec.c  bdc_exec.h  cli.h  cli_client.c  cli_server.c  coap_client.c  coap_common.c  coap_server.c  common_defs.h  compiler.h  data_model.c  data_model.h  database.c  database.h  device.h  device_bulkdata.c  device_controller.c  device_ctrust.c  device_firmware.c  device_iplcap.c  device_local_agent.c  device_mqtt.c  device_mtp.c  device_request.c  device_security.c  device_selftest_example.c  device_stomp.c  device_subscription.c  device_time.c  device_uds.c  device_wifi.c  dllist.c  dllist.h  dm_access.c  dm_access.h  dm_exec.c  dm_exec.h  dm_inst_vector.c  dm_inst_vector.h  (+105 more)
src/include/: compiler.h  usp_api.h  usp_err_codes.h  vendor_api.h
src/libjson/ccan/json/: json.c
src/protobuf-c/: CMakeLists.txt  pedigree.txt  protobuf-c.ABOUT  protobuf-c.c  usp-msg.pb-c.c  usp-msg.pb-c.h  usp-record.pb-c.c  usp-record.pb-c.h
